--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,11 @@ p {
   max-width: 600px;
 }
 
+.container-fluid {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 .aw {
   font-family: "audiowide", sans-serif;
 }
@@ -47,7 +52,11 @@ p {
 }
 
 .bg-black {
-  background-color: black;
+  background-color: rgb(0, 0, 0);
+}
+
+.bg-black-a {
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .bs-5 {
@@ -68,6 +77,22 @@ p {
 
 .spaces-3 {
   height: 4rem;
+}
+
+.rounded-10 {
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.rounded-15 {
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
 }
 
 .headings-center {
@@ -138,8 +163,8 @@ p {
   padding: 0.25rem 0.75rem;
   font-size: 1.25rem;
   line-height: 1;
-  background-color: black;
-  border: 1px solid white;
+  background-color: rgb(0, 0, 0);
+  border: 1px solid rgb(255, 255, 255);
   border-radius: 0.25rem;
   margin: 2%;
 }
@@ -168,7 +193,7 @@ nav {
 }
 
 .navbar-dark .navbar-nav .show>.nav-link {
-  color: black;
+  color: rgb(0, 0, 0);
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -370,6 +395,7 @@ nav {
 
 /*SHOP*/
 .product-containter {
+
   height: fit-content;
   background: url(/static/images/evan-wise-blog-bg.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -391,6 +417,7 @@ nav {
 
 .checkout-container {
   height: 100vh;
+
   background: url(/static/images/george-pagan-iii-gym-tag.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -408,6 +435,41 @@ nav {
 .cart-actions {
   display: flex;
   flex-direction: column;
+}
+
+#plus {
+  color: rgb(51, 169, 111);
+}
+
+#plus:hover {
+  background-color: rgb(51, 169, 111);
+  color: rgb(255, 255, 255);
+}
+
+#minus {
+  color: rgb(229, 206, 33);
+}
+
+#minus:hover {
+  color: rgb(255, 255, 255);
+  background-color: rgb(229, 206, 33);
+}
+
+#trash:hover {
+  background-color: rgb(231, 49, 63);
+  color: rgb(255, 255, 255);
+}
+
+#trash {
+  color: rgb(231, 49, 63);
+}
+
+.shop-container {
+  background: url(/static/images/george-pagan-iii-gym-tag.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 /* Footer */
