--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load cart_template_tags %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -86,7 +87,7 @@
                 <div id="cart" class="mr-md-4">
                     <a href="{% url 'cart:summary' %}" class="site-cart">
                         <span><i class="fad fa-shopping-cart text-wht"></i></span>
-                        <span class="count aw text-wht">$1179.00</span>
+                        <span class="count aw text-wht">${{ request|cart_total}}</span>
                     </a>
                 </div>
 
