--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -21,91 +21,90 @@
             </h3>
         </div>
     </div>
-    {% for item in order.items.all %}
-    <div class="container bg-warning">
-        <div class="row justify-content-around text-center">
-            <div class="col-md-2 col-12 align-self-center ">
-                <img src="{{ item.product.image.url }}" style="width: 8rem;" alt="">
+    <div class="container-fluid  bg-black-a shop-container">
+        {% for item in order.items.all %}
+        <div class="row justify-content-around text-center  bg-black-a rounded-10 text-wht">
+            <div class="col-md-2 col-12 align-self-center my-2">
+                <img src="{{ item.product.image.url }}" class="rounded-10" style="width: 8rem;" alt="">
             </div>
             <div class="col-md-3  col-12 align-items-center">
                 <h4 class="text-center">{{ item.product.title }}</h4>
                 <small>Size: {{ item.size.name }}</small>
                 <p class="text-center">This is some text about the product</p>
             </div>
-            <div class="col-md-2 col-12 align-self-center">
-                <div class=" input-group" style="max-width: 120px;">
+            <div class="col-md-2 col-12 align-self-center mb-2">
+                <div class="mx-auto input-group" style="max-width: 120px;">
                     <div class="input-group-prepend">
-                        <a href="{% url 'cart:decrease-quantity' item.id %}" class="btn btn-outline-primary">
-                            &minus;
+                        <a id="minus" href="{% url 'cart:decrease-quantity' item.id %}" class=" btn btn-outline-light">
+                            <strong>&minus;</strong>
                         </a>
                     </div>
                     <input type="text" class="aw form-control text-center" value="{{ item.quantity }}">
                     <div class="input-group-append">
-                        <a href="{% url 'cart:increase-quantity' item.id %} " class="btn btn-outline-primary">
-                            &plus;
+                        <a id="plus" href="{% url 'cart:increase-quantity' item.id %} " class=" btn btn-outline-light">
+                            <strong>&plus;</strong>
                         </a>
                     </div>
                 </div>
             </div>
             <div class="col-md-2 col-12 align-self-center">
-                <h5 class="aw">${{ item.get_total_price_item }}</h5>
+                <h5 class="aw">${{ item.get_total_item_price }}</h5>
             </div>
-            <div class="col-md-1 col-12 align-self-center text-right">
-                <a href="{% url 'cart:remove-from-cart' item.id %}" class="btn btn-primary btn-sm"><i
-                        class="fad fa-trash-alt"></i></a>
+            <div class="col-md-1 col-12 align-self-center">
+                <a id="trash" href="{% url 'cart:remove-from-cart' item.id %}"
+                    class="text-wht btn btn-outline-light btn-md"><i class="fad fa-trash-alt"></i></a>
             </div>
 
         </div>
-    </div>
-    <hr>
-    {% empty %}
-    <div class="container">
-        <div class="row align-items-center">
-            <h5 class="col-12 empty">
-                There are no items in your cart. <a href="{% url 'cart:product-list' %}">Continue
-                    Shopping</a>
-            </h5>
-        </div>
-    </div>
 
-    {% endfor %}
-    <!-- 
+        <hr>
+        {% empty %}
+        <div class="container">
+            <div class="row align-items-center">
+                <h5 class="col-12 empty">
+                    There are no items in your cart. <a href="{% url 'cart:product-list' %}">Continue
+                        Shopping</a>
+                </h5>
+            </div>
+        </div>
+
+        {% endfor %}
+        <!-- 
     
 
     <!--Totals Section-->
-    <div class="row  justify-content-end ">
-        <div class="col-md-7 col-6"></div>
-        <div class="  col-md-4 col-12 ">
-            <div class="row mt-3">
-                <div class="aw d-flex justify-content-start col-6">
-                    <h5>SubTotal</h5>
-                </div>
-                <div class="aw d-flex justify-content-end col-6">
-                    <h5>$0.00</h5>
-                </div>
-                <div class="aw d-flex justify-content-start col-6">
-                    <h5>Total</h5>
-                </div>
-                <div class="aw d-flex justify-content-end col-6">
-                    <h5>$0.00</h5>
+        <div class="row  justify-content-end ">
+            <div class="col-md-7 col-6"></div>
+            <div class=" text-wht col-md-4 col-12 rounded-10 bg-black-a mr-3">
+
+                {% if order.items.count > 0 %}
+
+                <div class="row mt-3 ">
+                    <div class="aw d-flex justify-content-start col-6">
+                        <h5>SubTotal</h5>
+                    </div>
+                    <div class="aw d-flex justify-content-end col-6">
+                        <h5>${{ order.get_subtotal }}</h5>
+                    </div>
+                    <div class="aw d-flex justify-content-start col-6">
+                        <h5>Total</h5>
+                    </div>
+                    <div class="aw d-flex justify-content-end col-6">
+                        <h5>${{ order.get_total }}</h5>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row justify-content-end ">
-        <div class="col-md-7 col-6"></div>
-        <div class="  col-md-4 col-6">
-            <div class="row mt-3">
-                <div class="d-flex justify-content-center col-12">
-                    <button class="w-100">CheckOut</button>
-                </div>
-                <div class="d-flex justify-content-center col-12">
-                    <button class="w-100">Keep Shopping</button>
-                </div>
+        <div class="row justify-content-end aw mt-1 ">
+            <div class="col-md-6 col-12">
+                <a href="{% url 'cart:product-list' %}" class="btn btn-primary w-100 rounded-10">Keep Shopping</a>
+            </div>
+            <div class="col-md-6 col-12">
+                <a href="" class="btn btn-success w-100 rounded-10">CheckOut</a>
             </div>
         </div>
+        {% endif %}
+        <div class="spaces-2"></div>
     </div>
-</div>
 
-
-{% endblock content %}
+    {% endblock content %}
