added search but need to fix bugs

--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -100,7 +100,7 @@
                 <a href="{% url 'cart:product-list' %}" class="btn btn-primary w-100 rounded-10">Keep Shopping</a>
             </div>
             <div class="col-md-6 col-12">
-                <a href="" class="btn btn-success w-100 rounded-10">CheckOut</a>
+                <a href="{% url 'cart:checkout' %}" class="btn btn-success w-100 rounded-10">CheckOut</a>
             </div>
         </div>
         {% endif %}
