--- a/templates/index.html
+++ b/templates/index.html
@@ -55,10 +55,10 @@
         </div>
         <div class="card">
             <div class="card-body">
-                <h3 class="card-title text-center aw">Gym Community</h3>
+                <h3 class="card-title text-center aw">Community Blogs</h3>
                 <p class="card-text text-center">
-                    A friendly place where you can discuss articles on the blogs and
-                    write you owne blogs to.
+                    A friendly bloging community where you can read about other
+                    members experances or blog about your own.
                 </p>
             </div>
             <img src="{% static 'images/bruce-mars-(friends)800.jpg' %}" class="card-img-top" alt="..." />
@@ -105,11 +105,14 @@
         <h4 class="aw text-center mb-5">Look your Best and Feel even Better</h4>
     </div>
     <!--Product Cards-->
-    <!-- <div class="card-deck">
+    <div class="card-deck">
         <div class="card bs-5">
-            <img src="{% static 'images\bcaa.jpg' %}" class="card-img-top card-item-size mt-2" alt="...">
+            <img src="{% static 'images\protien.jpg' %}" class="card-img-top card-item-size mt-2" alt="...">
             <div class="card-body">
                 <h5 class="card-title aw text-center">Card title</h5>
+                <p class="card-text text-center">A powerful Whey Protein Isolate post-workout to
+                    supercharge muscle growth and recovery in the golden hour after training</p>
+                <p class="aw card-text text-center"><strong>$29.95</strong></p>
             </div>
             <div class=" text-center">
                 <a class="ripple-surface w-100 btn btn-success btn-lg aw text-wht border border-secondary bs-2" href="#"
@@ -119,8 +122,10 @@
         <div class="card bs-5">
             <img src="{% static 'images\creatine.jpg' %}" class="card-img-top card-item-size mt-2" alt="...">
             <div class="card-body">
-                <h5 class="card-title aw text-center">Card title</h5>
-
+                <h5 class="card-title aw text-center">C-HCl CREATINE</h5>
+                <p class="card-text text-center">Patented Creatine HCL
+                    The ONLY Patented Creatine HCL!</p>
+                <p class="aw card-text text-center"><strong>$15.95</strong></p>
             </div>
             <div class=" text-center">
                 <a class="ripple-surface w-100 btn btn-success btn-lg aw text-wht border border-secondary bs-2" href="#"
@@ -128,9 +133,11 @@
             </div>
         </div>
         <div class="card bs-5">
-            <img src="{% static 'images\protien.jpg' %}" class="card-img-top card-item-size mt-2" alt="...">
+            <img src="{% static 'images/bcaa.jpg' %}" class="card-img-top card-item-size mt-2" alt="..."></>
             <div class="card-body">
-                <h5 class="card-title aw text-center">Card title</h5>
+                <h5 class="card-title aw text-center">LeanBCAA Fat Burner</h5>
+                <p class="card-text text-center">BCAA Powder</p>
+                <p class="aw card-text text-center"><strong>$29.95</strong></p>
             </div>
             <div class=" text-center">
                 <a class="ripple-surface w-100 btn btn-success btn-lg aw text-wht border border-secondary bs-2" href="#"
@@ -138,9 +145,9 @@
                 </a>
             </div>
         </div>
-    </div> -->
+    </div>
 
-    <div class="container">
+    <!-- <div class="container">
         <div class="row mb-5">
 
             <div class="col-lg-4 col-md-6 mb-4">
@@ -156,10 +163,10 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
-                <figure class="block-4-image">
+                <figure class="block-4-image mx-auto">
                     <a href=""><img class="img-fluid" src="{% static 'images\creatine.jpg' %}" alt=""></a>
                 </figure>
-                <div class="block-4-text p-4">
+                <div class="block-4-text text-center p-4">
                     <a href="">
                         <h3>Product <title></title>
                         </h3>
@@ -178,9 +185,9 @@
                     </a>
                     <p class="mb-0 text-bk">product.description</p>
                 </div>
-            </div>
-            <!--  {% for product in object_list %}  {% endfor %} -->
-        </div>
+            </div> -->
+    <!--  {% for product in object_list %}  {% endfor %} -->
+    </div>
     </div>
 </section>
 <section id="section3">
