--- a/static/css/style.css
+++ b/static/css/style.css
@@ -146,7 +146,7 @@ p {
 
 #cart {
   position: absolute;
-  top: -2rem;
+  top: -0.3rem;
   right: 15px;
   z-index: 9999999;
   font-size: 1.35rem;
@@ -295,7 +295,9 @@ nav {
   margin-right: auto;
   margin-left: auto;
   margin-top: -5rem;
-  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0px 9px 24px 6px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 9px 24px 6px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 9px 24px 6px rgba(0, 0, 0, 0.75);
   z-index: 2;
 }
 
@@ -430,6 +432,10 @@ nav {
   min-height: 50vh;
   justify-content: center;
   align-items: center;
+}
+
+.block-4-image {
+  width: 10rem;
 }
 
 .cart-actions {
