--- a/templates/base.html
+++ b/templates/base.html
@@ -69,8 +69,8 @@
                     </div>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0 pl-2">
-                <input class="ml-3 aw" type="search" placeholder="Search Focus" aria-label="Search" />
+            <form method="GET" action="{% url 'cart:product-list' %}" class=" form-inline my-2 my-lg-0 pl-2">
+                <input class="ml-3 aw" type="text" name="q" placeholder="Search Focus" aria-label="Search" />
                 <button class="aw btn btn-outline-text-light my-2 my-sm-0" type="submit">
                     <span class="icon">
                         <i class="text-wht fas fa-search fa-lg"></i>
