--- a/templates/cart/product_list.html
+++ b/templates/cart/product_list.html
@@ -18,7 +18,7 @@
             {% for product in object_list %}
             <div class="col-lg-4 col-md-6 mb-4" data-aos='fade-up'>
 
-                <figure class="block-4-image">
+                <figure class="block-4-image mx-auto">
                     <a href="{{ product.get_absolute_url }}"><img src="{{ product.image.url }}" class="img-fluid"></a>
                 </figure>
 
