--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -12,12 +12,82 @@
     </div>
 </div>
 
+<div class="container-fluid product-overlay">
+    <div class="container">
+        <div class="row">
+            <div class="col text-center mt-3">
+                <h2 class="aw">Products</h2>
+                <hr class="w-50">
+            </div>
+        </div>
+        <div class="row d-flex justify-content-around">
+            <div class="product-containter col-10 offser-1">
+                <div class="row mt-1 mb-2"></div>
+                <div class="row ">
 
-<div class="container">
-    <div class="row">
-        <div class="col">
-            {{ products }}
+                    {% for product in products %}
+                    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                        <div class="card w-100 h-100 border-1">
+
+                            {% if product.image %}
+                            <a class="mx-auto" href="">
+                                <img class="mx-auto card-img-top shop-card-top-img img-fluid"
+                                    src="{{ product.image.url }}" alt="{{ product.name }}">
+                            </a>
+                            {% else %}
+                            <a href="">
+                                <img class="" card-img-top shop-card-top-img img-fluid" src="{{ MEDIA_URL }}noimage.png"
+                                    alt="{{ product.name }}">
+                            </a>
+                            {% endif %}
+                            <div class="card-body pb-0">
+                                <p class="aw text-center">{{ product.name }}</p>
+                            </div>
+                            <div class="card-footer bg-white pt-0 border-0 text-left">
+                                <div class="row ">
+                                    <div class="col">
+                                        <p class="lead mb-0 text-left aw">${{ product.price }}</p>
+                                        {% if product.rating %}
+                                        <i class="fad fa-star mr-1"></i>
+                                        <small class="text-muted">{{ product.rating }}</small>
+                                        {% else %}
+                                        <small class="text-muted">No rating</small>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    {% if forloop.counter|divisibleby:1 %}
+                    <div class=" col-12 d-sm-none mb-5">
+                        <hr>
+                    </div>
+                    {% endif %}
+
+                    {% if forloop.counter|divisibleby:2 %}
+                    <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+                        <hr>
+                    </div>
+                    {% endif %}
+
+                    {% if forloop.counter|divisibleby:3 %}
+                    <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+                        <hr>
+                    </div>
+                    {% endif %}
+
+                    {% if forloop.counter|divisibleby:4 %}
+                    <div class="col-12 d-none d-xl-block mb-5">
+                        <hr>
+                    </div>
+                    {% endif %}
+
+                    {% endfor %}
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
 {% endblock content %}
