--- a/static/css/style.css
+++ b/static/css/style.css
@@ -396,30 +396,22 @@ nav {
 }
 
 /*SHOP*/
-.product-containter {
 
-  height: fit-content;
-  background: url(/static/images/evan-wise-blog-bg.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
 
 .product-overlay {
-  background-color: rgba(255, 255, 255, 1);
-  width: fit-content;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
   height: fit-content;
-  border-radius: 20px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
+}
+
+.shop-card-top-img {
+  width: 7rem;
+  height: 10rem;
+
 }
 
 .checkout-container {
   height: 100vh;
-
   background: url(/static/images/george-pagan-iii-gym-tag.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
