--- a/static/css/style.css
+++ b/static/css/style.css
@@ -407,8 +407,10 @@ nav {
 .shop-card-top-img {
   width: 7rem;
   height: 10rem;
-
 }
+
+/* Product Detail page */
+
 
 .checkout-container {
   height: 100vh;
