--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -18,11 +18,11 @@
                 <div class="col-md-3 col-6 d-flex d-flex justify-content-center no-gutters">
                     <a class="ripple-surface hero-btn btn btn-danger btn-lg aw text-wht m-1 border border-white"
                         href="#" role="button">Join Up</a>
-                    <!--Go to checkout-->
+
                 </div>
                 <div class="col-md-3 col-6 d-flex d-flex justify-content-center no-gutters">
                     <a class="ripple-surface hero-btn btn btn-primary btn-lg aw text-wht m-1 border border-white"
-                        href="#" role="button">Shop
+                        href="{% url 'products' %}" role="button">Shop
                     </a>
                 </div>
                 <div class="col-md-3 col-6 d-flex d-flex justify-content-center no-gutters">
