added search capabilties

--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
                     </div>
                 </li>
             </ul>
-            <form method="GET" action="#" class=" form-inline my-2 my-lg-0 pl-2">
+            <form method="GET" action="{% url 'products' %}" class=" form-inline my-2 my-lg-0 pl-2">
                 <input class="ml-3 aw" type="text" name="q" placeholder="Search Focus" aria-label="Search" />
                 <button class="aw btn btn-outline-text-light my-2 my-sm-0" type="submit">
                     <span class="icon">
