--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -84,11 +84,59 @@
             </ul>
         </div>
         <hr class="w-50">
+        {% for c in categories %}
+        <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
+            <span
+                class="p-2 mt-2 badge badge-white text-black rounded-1 border border-dark">{{ c.friendly_name }}</span>
+        </a>
+        {% endfor %}
+
         <div class="row d-flex justify-content-around">
             <div class="product-containter col-10 offser-1">
-                <div class="row mt-1 mb-2"></div>
-                <div class="row ">
+                <div class="row mt-1 mb-2">
+                    <div
+                        class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+                        <div class="aw sort-select-wrapper w-md-25 w-sm-100">
+                            <select id="sort-selector"
+                                class="custom-select custom-select-sm rounded-2 border border-{% if sorting != 'None_None' %}info{% else %}black{% endif %}">
+                                <option value="reset" {% if sorting == 'None_None' %}selected{% endif %}>Sort
+                                    by...
+                                </option>
+                                <option value="price_asc" {% if sorting == 'price_asc' %}selected{% endif %}>
+                                    Price
+                                    (low to high)</option>
+                                <option value="price_desc" {% if sorting == 'price_desc' %}selected{% endif %}>
+                                    Price
+                                    (high to low)</option>
+                                <option value="rating_asc" {% if sorting == 'rating_asc' %}selected{% endif %}>
+                                    Rating (low to high)</option>
+                                <option value="rating_desc" {% if sorting == 'rating_desc' %}selected{% endif %}>
+                                    Rating (high to low)</option>
+                                <option value="name_asc" {% if sorting == 'name_asc' %}selected{% endif %}>Name
+                                    (A-Z)</option>
+                                <option value="name_desc" {% if sorting == 'name_desc' %}selected{% endif %}>
+                                    Name
+                                    (Z-A)</option>
+                                <option value="category_asc" {% if sorting == 'category_asc' %}selected{% endif %}>
+                                    Category (A-Z)</option>
+                                <option value="category_desc" {% if sorting == 'category_desc' %}selected{% endif %}>
+                                    Category (Z-A)
+                                </option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 order-md-first">
+                        <p class="text-muted mt-3 text-center text-md-left">
+                            {% if search_term or current_categories or current_sorting != 'None_None' %}
+                            <span class="small"><a href="{% url 'products' %}">Products Home</a> | </span>
+                            {% endif %}
+                            {{ products|length }} Products{% if search_term %} found for
+                            <strong>"{{ search_term }}"</strong>{% endif %}
+                        </p>
+                    </div>
+                </div>
 
+                <div class="row ">
                     {% for product in products %}
                     <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                         <div class="card w-100 h-100 border-1">
@@ -111,6 +159,14 @@
                                 <div class="row ">
                                     <div class="col">
                                         <p class="lead mb-0 text-left aw">${{ product.price }}</p>
+                                        {% if product.category %}
+                                        <p class="small mt-1 mb-0">
+                                            <a class="text-muted"
+                                                href="{% url 'products' %}?category={{ product.category.name }}">
+                                                <i class="fad fa-tags"></i>&nbsp;{{ product.category.friendly_name }}
+                                            </a>
+                                        </p>
+                                        {% endif %}
                                         {% if product.rating %}
                                         <i class="fad fa-star mr-1"></i>
                                         <small class="text-muted">{{ product.rating }}</small>
