added javascript for select box and top of screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -152,6 +152,18 @@ p {
   font-size: 1.35rem;
 }
 
+.btt-button {
+  height: 42px;
+  width: 42px;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  z-index: 9999999;
+}
+
+.btt-link {
+  cursor: pointer;
+}
 
 /* TopNav*/
 .navbar {
