--- a/templates/base.html
+++ b/templates/base.html
@@ -137,6 +137,13 @@
     {% block content %}
     {% endblock content %}
 
+
+
+    {% block postloadjs %}
+
+    {% endblock postloadjs %}
+
+
     <!--footer-->
     <div class=" container-fluid footer-image">
         <div class="row align-items-center">
