--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -13,7 +13,7 @@
             <div class="headings-center">
                 <div class="row ">
                     <div class="col-md-12 mb-0">
-                        <a class="text-wht aw" href="{% url 'home' %}">Home</a>
+                        <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
                         <span class="mx-2 mb-0 text-wht">/</span>
                         <strong class="text-wht aw">Contact</strong>
                     </div>
