--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,6 +3,15 @@
 
 
 {% block content %}
+<div class="container-fluid bg-black">
+    <div class="row">
+        <div class="col-md-12 mb-0">
+            <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
+
+        </div>
+    </div>
+</div>
+
 <section id="section1">
     <div id="section1-pic">
         <div class="spaces-1"></div>
