added cart app and cart.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -409,6 +409,13 @@ nav {
 
 /*SHOP*/
 
+/* .container-shop {
+  background: url(/static/images/george-pagan-iii-gym-tag.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} */
 
 .product-overlay {
   background-color: rgb(255, 255, 255);
