added ad to car logic

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,7 +103,7 @@
             <div class="col-md-12 mb-0  text-right">
 
                 <div id="cart" class="mr-md-4">
-                    <a href="{% url 'CarView' %}" class="site-cart">
+                    <a href="{% url 'cart_view' %}" class="site-cart">
                         <span><i class="fad fa-shopping-cart text-wht"></i></span>
                         <span class="count aw text-wht">
                             {% if grand_total %}
