--- a/products/templates/products/products_detail.html
+++ b/products/templates/products/products_detail.html
@@ -49,7 +49,7 @@
                     {% else %}
                     <small class="text-muted">No Rating</small>
                     {% endif %}
-                    <p class=" mt-3">{{ product.description }}</p>
+
                     <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
@@ -101,7 +101,7 @@
                                     <span class="text-uppercase">Keep Shopping</span>
                                 </a>
                                 <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5"
-                                    value="Add to Bag">
+                                    value="Add to Cart">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             {% endwith %}
@@ -109,6 +109,7 @@
                     </form>
                 </div>
             </div>
+            <p class="col-12 mt-3">{{ product.description }}</p>
         </div>
     </div>
 
