added JavaScript to increase and decrease btns

--- a/products/templates/products/products_detail.html
+++ b/products/templates/products/products_detail.html
@@ -114,3 +114,8 @@
     </div>
 
     {% endblock content %}
+    {% block postloadjs %}
+    {{ block.super }}
+    {% include "products\includes\quantity_input_script.html" %}
+
+    {% endblock postloadjs %}
