--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -13,67 +13,108 @@
     </div>
 </div>
 
-<div class="container-cart">
-    <div class="container product-overlay">
-        <div class="container mb-2">
-            <div class="row">
-                <div class="col">
-                    <hr>
-                    <h2 class="aw mb-4">
-                        Shopping Cart
-                    </h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-
-                    {% if cart_items %}
-                    <div class="table-responsive rounded-10">
-                        <table class="table table-sm table-borderless">
-                            <thead class="">
-                                <tr>
-                                    <th scope="col">Product</th>
-                                    <th scope="col"></th>
-                                    <th scope="col">Price</th>
-                                    <th scope="col">Qty</th>
-                                    <th scope="col">SubTotal</th>
-                                </tr>
-                            </thead>
-                            {% for item in cart_items %}
-                            <tr>
-                                <td class="p-3 w-25">
-                                    <img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="">
-                                </td>
-                                <td class="py-3">
-                                    <p>${{ item.products.price }}</p>
-                                </td>
-                                <td class="py-3">
-                                    <p>{{ item.products.quantity }}</p>
-                                </td>
-                                <td class="py-3">
-                                    <p>${{ item.products.price }}</p>
-                                </td>
-
-
-                            </tr>
-                            {% endfor %}
-                        </table>
-                    </div>
-                    {% else %}
-                    <div class="container">
-                        <div class="row align-items-center">
-                            <h5 class="col-12 empty">
-                                There are no items in your cart.&nbsp; <a href="{% url 'products' %}"> Continue
-                                    Shopping</a>
-                            </h5>
-                        </div>
-                    </div>
-                    {% endif %}
-
-                </div>
-            </div>
+<!-- <div class="container-cart"> -->
+<!-- <div class="container product-overlay"> -->
+<div class="container mb-2">
+    <div class="row">
+        <div class="col">
+            <hr>
+            <h2 class="aw mb-4 text-center">
+                Shopping Cart
+            </h2>
         </div>
     </div>
+    <div class="row">
+        <div class="col">
+
+            {% if cart_items %}
+            <div class="table-responsive rounded-10">
+                <table class="table table-sm table-borderless">
+                    <thead class="text-center ">
+                        <tr>
+                            <th class="d-none d-sm-none d-md-block" scope="col">&nbsp;</th>
+                            <th scope="col" class="text-left"><u>Product</u></th>
+                            <th scope="col"><u>Price</u></th>
+                            <th scope="col"><u>Qty</u></th>
+                            <th scope="col" class="text-right"><u>SubTotal</u></th>
+                            <!-- <th scope="col">&nbsp;</th> -->
+                        </tr>
+                    </thead>
+                    {% for item in cart_items %}
+                    <tr>
+                        <td class="p-md-3 p-0 w-75 d-none d-sm-none d-md-block">
+                            <img class="img-fluid rounded d-none d-sm-none d-md-block"
+                                src="{{ item.product.image.url }}" alt="">
+                        </td>
+                        <td class="py-3 ">
+                            <p>{{ item.product.name }}</p>
+                            {% if item.product.has_sizes %}
+                            <p class="text-muted">Size: {{ item.size|upper }}</p>
+                            {% else %}
+                            {% endif %}
+                        </td>
+                        <td class="py-3 ">
+                            <p class="text-center">${{ item.product.price }}</p>
+                        </td>
+                        <td class="py-3  text-center">
+                            <p>{{ item.quantity }}</p>
+                        </td>
+                        <td class="py-3 text-right">
+                            <p class="text-right">${{ item.product.price }}</p>
+                            <a class="bg-danger mr-3 rounded-10" href="">
+                                <i class="fad fa-trash-alt text-wht p-2"></i>
+                            </a>
+                        </td>
+                        <!-- <td class="py-3 align-middle text-right">
+                            <button type="button" class="btn btn-danger"><i class="fad fa-trash-alt"></i></button>
+                        </td> -->
+                    </tr>
+                    {% endfor %}
+                    <tr>
+                        <td colspan="5" class="pt-5 text-right">
+                            <h6><strong class="aw">Bag Total: ${{ total|floatformat:2 }}</strong></h6>
+                            <h6 class="aw">Delivery ${{ delivery|floatformat:2 }}</h6>
+                            <h4 class="mt-4 aw"><strong>Total: ${{grand_total|floatformat:2 }}</strong></h4>
+
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="5" class="text-right">
+                            <a href="{% url 'products' %}" class="btn btn-outline-blakc rounded-10 btn-lg">
+                                <span class="icon">
+                                    <i class="fad fa-store"></i>
+                                </span>
+                                <span class="text-uppercase">Keep Shopping</span>
+                                </span>
+                            </a>
+                            <a href="" class="btn btn-outline-blakc rounded-10 btn-lg">
+
+                                <span class="text-uppercase">Checkout</span>
+                                </span>
+                                <span class="icon">
+                                    <i class="fad fa-lock-alt"></i>
+                                </span>
+                            </a>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            {% else %}
+            <div class="container">
+                <div class="row align-items-center">
+                    <h5 class="col-12 empty">
+                        There are no items in your cart.&nbsp; <a href="{% url 'products' %}"> Continue
+                            Shopping</a>
+                    </h5>
+                </div>
+            </div>
+            {% endif %}
+
+        </div>
+    </div>
+</div>
+</div>
 </div>
 
 {% endblock content %}
