added templatetags and logic

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -451,6 +451,11 @@ nav {
   width: 10rem;
 }
 
+.cart-img-size {
+  max-width: 7rem;
+
+}
+
 .cart-actions {
   display: flex;
   flex-direction: column;
