--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load bag_tools %}
 {% block content %}
 
 
@@ -43,7 +43,7 @@
                     {% for item in cart_items %}
                     <tr>
                         <td class="p-md-3 p-0 w-75 d-none d-sm-none d-md-block">
-                            <img class="img-fluid rounded d-none d-sm-none d-md-block"
+                            <img class="img-fluid cart-img-size rounded d-none d-sm-none d-md-block"
                                 src="{{ item.product.image.url }}" alt="">
                         </td>
                         <td class="py-3 ">
@@ -57,17 +57,46 @@
                             <p class="text-center">${{ item.product.price }}</p>
                         </td>
                         <td class="py-3  text-center">
-                            <p>{{ item.quantity }}</p>
+                            <form class="form update-form" method="POST" action="{% url 'adjust_cart' item.item_id %}">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <div class="input-group-append">
+                                            <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                                data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                                <span class="">
+                                                    <i class="fas fa-plus fa-sm"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <input class="form-control form-control-sm qty_input" type="number"
+                                            name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                                            data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
+                                        <div class="input-group-prepend">
+                                            <button class="decrement-qty  btn btn-sm btn-black rounded-0"
+                                                data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                                <span class="">
+                                                    <i class="fas fa-minus fa-sm"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        {% if item.product.has_sizes %}
+                                        <input type="hidden" name="product_size" value="{{ item.size }}">
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            </form>
+                            <a class=" btt-link update-link"><i class="fad fa-cart-plus text-primary"></i><small
+                                    class="text-primary">&nbsp;Update</small></a>
+                            <a class="btt-link remove-item text-danger float-right " id="remove_{{ item.item_id }}"
+                                data-product_size="{{ item.size }}"><small class="text-red">Remove
+                                </small><i class=" fad fa-trash-alt fa-sm text-red"></i></a>
+
                         </td>
-                        <td class="py-3 text-right">
-                            <p class="text-right">${{ item.product.price }}</p>
-                            <a class="bg-danger mr-3 rounded-10" href="">
-                                <i class="fad fa-trash-alt text-wht p-2"></i>
-                            </a>
+                        <td class=" py-3 text-right">
+                            <p class="text-right">${{ item.product.price|calc_subtotal:item.quantity }}</p>
                         </td>
-                        <!-- <td class="py-3 align-middle text-right">
-                            <button type="button" class="btn btn-danger"><i class="fad fa-trash-alt"></i></button>
-                        </td> -->
+
                     </tr>
                     {% endfor %}
                     <tr>
@@ -120,7 +149,37 @@
 {% endblock content %}
 
 
+{% block postloadjs %}
+{{ block.super }}
+{% include "products\includes\quantity_input_script.html" %}
 
+<script type="text/javascript">
+    // Update quantity on click
+    $('.update-link').click(function (e) {
+        var form = $(this).prev('.update-form');
+        form.submit();
+    })
+
+    // Remove item and reload on click
+    $('.remove-item').click(function (e) {
+        var csrfToken = "{{ csrf_token }}";
+        var itemId = $(this).attr('id').split('remove_')[1];
+        var size = $(this).data('product_size');
+        var url = `/cart/remove/${itemId}/`;
+        var data = {
+            'csrfmiddlewaretoken': csrfToken,
+            'product_size': size
+        };
+
+        $.post(url, data)
+            .done(function () {
+                location.reload();
+            });
+    })
+</script>
+
+
+{% endblock postloadjs %}
 
 
 
