--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -117,7 +117,7 @@
                                 <span class="text-uppercase">Keep Shopping</span>
                                 </span>
                             </a>
-                            <a href="" class="btn btn-outline-blakc rounded-10 btn-lg">
+                            <a href="{% url 'checkout' %}" class="btn btn-outline-blakc rounded-10 btn-lg">
 
                                 <span class="text-uppercase">Checkout</span>
                                 </span>
@@ -177,7 +177,6 @@
             });
     })
 </script>
-
 
 {% endblock postloadjs %}
 
