--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/checkout.css' %}" />
     {% endblock core_css %}
 
 
@@ -35,7 +36,8 @@
     <script src="https://kit.fontawesome.com/81e9d69a66.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="{% static 'js/ripple.js' %}" />
+    <!-- <link rel="stylesheet" href="{% static 'js/ripple.js' %}" />
+    <link rel="stylesheet" href="{% static 'js/cart.js' %}" /> -->
     {% endblock corejs %}
 
 
