--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,7 @@
     <script src="https://kit.fontawesome.com/81e9d69a66.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     <!-- <link rel="stylesheet" href="{% static 'js/ripple.js' %}" />
     <link rel="stylesheet" href="{% static 'js/cart.js' %}" /> -->
     {% endblock corejs %}
