--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -6,7 +6,7 @@
 <div class="container-fluid bg-black">
     <div class="row">
         <div class="col-md-12 mb-0">
-            <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
+            <a class="text-wht aw pl-2 ripple-surface" href="{% url 'home' %}">Home</a>
 
         </div>
     </div>
@@ -26,7 +26,7 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-md-3 col-6 d-flex d-flex justify-content-center no-gutters">
                     <a class="ripple-surface hero-btn btn btn-danger btn-lg aw text-wht m-1 border border-white"
-                        href="#" role="button">Join Up</a>
+                        href="{% url 'account_signup' %}" role="button">Join Up</a>
 
                 </div>
                 <div class="col-md-3 col-6 d-flex d-flex justify-content-center no-gutters">
