--- a/templates/base.html
+++ b/templates/base.html
@@ -30,16 +30,17 @@
 
 
 
-    {% block corejs %}
+    {% block Core_js %}
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/81e9d69a66.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script src="https://js.stripe.com/v3/"></script>
-    <!-- <link rel="stylesheet" href="{% static 'js/ripple.js' %}" />
-    <link rel="stylesheet" href="{% static 'js/cart.js' %}" /> -->
-    {% endblock corejs %}
+    <script rel="stylesheet" href="{% static 'js/ripple.js' %}"></script>
+    <script rel="stylesheet" href="{% static 'js/cart.js' %}"></script>
+    <script src="{% static 'js/stripe_elements.js' %}"></script>
+    {% endblock Core_js %}
 
 
     {% block extra_js %}
