--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -122,13 +122,13 @@
                     <input type="hidden" value="" name="client_secret">
                 </fieldset>
                 <div class="submit-button text-right mt-5 mb-2">
-                    <a href="{% url 'cart_view' %}" class="btn btn-outline-black rounded-0">
+                    <a href="{% url 'cart_view' %}" class="btn btn-outline-black ">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
                         <span class="font-weight-bold">Adjust Bag</span>
                     </a>
-                    <button id="submit-button" class="btn btn-black rounded-0">
+                    <button id="submit-button" class="btn btn-black ">
                         <span class="font-weight-bold">Complete Order</span>
                         <span class="icon">
                             <i class="fas fa-lock"></i>
@@ -150,7 +150,9 @@
 {% endblock content %}
 
 {% block postloadjs %}
+{{ block.super }}
 {{ stripe_public_key|json_script:"id_stripe_public_key" }}
 {{ client_secret|json_script:"id_client_secret" }}
 <script src="{% static 'js/stripe_elements.js' %}"></script>
+
 {% endblock postloadjs %}
