--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -249,3 +249,8 @@
 </section>
 
 {% endblock content %}
+
+{% block postload_js %}
+{{ block.super }}
+<script src="{% static 'js/ripple.js' %}"></script>
+{% endblock postload_js %}
